--- a/www/index.html
+++ b/www/index.html
@@ -34,10 +34,14 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+        <button onclick="showI();">show</button>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
+            function showI(){
+                window.plugin.notification.local.add({ id:1,title:'titulka',message: 'Great app!' });
+            }
         </script>
     </body>
 </html>
